--- a/Source/Enter.UI/Components/Icon/EntIcon.razor
+++ b/Source/Enter.UI/Components/Icon/EntIcon.razor
@@ -1,5 +1,5 @@
 ﻿@using Enter.UI.Components.Icon
-@inherits EntComponentBase
+@inherits Enter.UI.Cores.Bases.EntComponentBase
 @namespace Enter.UI.Components
 
 
