--- a/Source/Enter.UI/Components/Overlay/EntOverlay.razor
+++ b/Source/Enter.UI/Components/Overlay/EntOverlay.razor
@@ -1,12 +1,6 @@
 ﻿@namespace Enter.UI.Components
-@inherits EntComponentBase
+@inherits Enter.UI.Cores.Bases.EntComponentBase
 
-@code {
-    public override void Dispose()
-    {
-        
-    }
-}
 
 
 
