--- a/Source/Enter.UI/Components/Tabs/EntTabPanel.razor
+++ b/Source/Enter.UI/Components/Tabs/EntTabPanel.razor
@@ -1,4 +1,4 @@
-﻿@inherits EntComponentBase
+﻿@inherits Enter.UI.Cores.Bases.EntComponentBase
 @namespace Enter.UI.Components
 
 <div @attributes="@AdditionalAttributes" class="@RootCss">
