--- a/example/Enter.Dashboard/App.razor
+++ b/example/Enter.Dashboard/App.razor
@@ -1,8 +1,9 @@
 ﻿@namespace Enter.Dashboard
 <EntThemeProvider
-    class="h-full"
-    Rtl="false"
+ 
+    RtlMode="false"
     DarkMode="false"
+    
     DrawerDefaultWidth="300">
     
     <Router AppAssembly="@typeof(App).Assembly">
