--- a/example/Enter.Dashboard/Components/Table.razor
+++ b/example/Enter.Dashboard/Components/Table.razor
@@ -1,4 +1,4 @@
-﻿@inherits Enter.UI.Core.Bases.EntPageBase
+﻿@inherits Enter.UI.Cores.Bases.EntPageBase
 @using Enter.Dashboard.Model
 <EntCard class="m-4" Title="صفحه فرم">
     <CardBody>
