--- a/example/Enter.Dashboard/Pages/Documents/DataTablePage.razor
+++ b/example/Enter.Dashboard/Pages/Documents/DataTablePage.razor
@@ -1,12 +1,11 @@
 ﻿@page "/documents/datatable"
 @using Enter.UI.Components.TreeView
 @using Enter.UI.Components.Button
-@using Enter.UI.Core.Bases;
 @using Enter.UI.Core.Extensions
 @using System.Net.Mime
 @using Enter.Dashboard.Model
 @using Enter.UI.Core
-@inherits EntPageBase
+@inherits Enter.UI.Cores.Bases.EntPageBase
 @layout DocumentLayout
 <EntCard class="m-4" Title="جدول داده">
     <CardBody>
