--- a/example/Enter.Dashboard/Pages/Documents/MdiTabPage.razor
+++ b/example/Enter.Dashboard/Pages/Documents/MdiTabPage.razor
@@ -4,10 +4,10 @@
 @using Enter.UI.Components.Icon
 @using Enter.Dashboard.Model
 @using Enter.UI.Services
-@inherits Enter.UI.Core.Bases.EntPageBase
+@inherits Enter.UI.Cores.Bases.EntPageBase
 @layout DocumentLayout
 <div class="p-4">
-    <EntMdiTab Responsive ItemDirection="EntTabItemDirection.Horizontal"
+    <EntMdiTab Tag="MdiTabPage" Responsive ItemDirection="EntTabItemDirection.Horizontal"
                               KeepPanelAlive="true"
                               PanelClass="h-full"
                               ActiveClass=""
