--- a/example/Enter.Dashboard/Pages/Documents/ModalPage.razor
+++ b/example/Enter.Dashboard/Pages/Documents/ModalPage.razor
@@ -6,7 +6,7 @@
 @using Enter.UI.Components.Modal
 @using Enter.UI.Core
 @using System.Diagnostics.Metrics
-@inherits Enter.UI.Core.Bases.EntPageBase
+@inherits Enter.UI.Cores.Bases.EntPageBase
 @layout DocumentLayout
 <div class="p-4">
     <EntCard Expandable="true"  Title="Modals">
