--- a/Source/Enter.UI/Components/Animator/EntAnimator.razor
+++ b/Source/Enter.UI/Components/Animator/EntAnimator.razor
@@ -1,5 +1,5 @@
 ﻿@namespace Enter.UI.Components
-@inherits EntComponentBase
+@inherits Enter.UI.Cores.Bases.EntComponentBase
 <div 
     @ref="Reference"
      @onanimationend="EventUtil.AsNonRenderingEventHandler(OnAnimationEndCallback)"
