--- a/Source/Enter.UI/Components/Inputs/EntInputTextarea.razor
+++ b/Source/Enter.UI/Components/Inputs/EntInputTextarea.razor
@@ -1,6 +1,6 @@
 ﻿@namespace Enter.UI.Components
 @using System.Diagnostics.CodeAnalysis
-@inherits EntInputBase<string?>
+@inherits Enter.UI.Cores.Bases.EntInputBase<string?>
 @implements IAsyncDisposable
 
 <div @attributes="@AdditionalAttributes" class="@RootCss" id="@Id">
@@ -18,9 +18,9 @@
     private ElementReference _elementReference = default!;
     
     private string RootCss => CssBuilder
-        .AddClass("ent-input")
-        .AddClass(BaseCss)
-        .AddClass(ValidationCss)
+        .AddCss("ent-input")
+        .AddCss(BaseCss)
+        .AddCss(ValidationCss)
         .Build();
 
 
