--- a/Source/Enter.UI/Components/List/EntList.razor
+++ b/Source/Enter.UI/Components/List/EntList.razor
@@ -1,5 +1,5 @@
 ﻿@namespace Enter.UI.Components
-@inherits EntComponentBase
+@inherits Enter.UI.Cores.Bases.EntComponentBase
 <ul @attributes="@AdditionalAttributes" class="@RootCss">
   
     @ChildContent
@@ -7,8 +7,8 @@
 
 @code {
 
-    private string RootCss => CssClassBuilder
-        .AddClass("ent-list")
+    private string RootCss => CssBuilder
+        .AddCss("ent-list")
         .Build();
 
     [Parameter]
