--- a/Source/Enter.UI/Components/NavMenu/EntNavMenuGroup.razor
+++ b/Source/Enter.UI/Components/NavMenu/EntNavMenuGroup.razor
@@ -1,6 +1,6 @@
 ﻿@namespace Enter.UI.Components
 @using Enter.UI.Components.Icon
-@inherits EntComponentBase
+@inherits Enter.UI.Cores.Bases.EntComponentBase
 <div @attributes="AdditionalAttributes" class="@RootCss" >
     <div class="ent-nav-menu-group-item" @onclick="@ToggleItem">
         @if (Icon != null)
