--- a/Source/Enter.UI/Components/NavMenu/EntNavMenuTitle.razor
+++ b/Source/Enter.UI/Components/NavMenu/EntNavMenuTitle.razor
@@ -1,6 +1,6 @@
 ﻿@namespace Enter.UI.Components
 @using Enter.UI.Components.Text
-@inherits EntComponentBase
+@inherits Enter.UI.Cores.Bases.EntComponentBase
 
 <EntText Type="EntTextType.Bold" Size="EntTextSize.Subtitle">
     @Title
