--- a/Source/Enter.UI/Components/Table/EntTable.razor
+++ b/Source/Enter.UI/Components/Table/EntTable.razor
@@ -1,5 +1,5 @@
 ﻿@namespace Enter.UI.Components
-@inherits EntComponentBase
+@inherits Enter.UI.Cores.Bases.EntComponentBase
 @typeparam T
 <CascadingValue Value="this">
     <table @attributes="AdditionalAttributes" class="@RootCss">
