--- a/Source/Enter.UI/Components/Toast/EntToastProvider.razor
+++ b/Source/Enter.UI/Components/Toast/EntToastProvider.razor
@@ -1,5 +1,5 @@
 ﻿@namespace Enter.UI.Components
-@inherits EntComponentBase
+@inherits Enter.UI.Cores.Bases.EntComponentBase
 @using Enter.UI.Components.Toast
 @using Enter.UI.Core
 @using Enter.UI.Services
@@ -13,13 +13,13 @@
 
         @foreach (var item in ToastInstances)
         {
-            var itemCss = new CssClassBuilder("ent-toast")
-                .AddClass("ent-toast--open", item.AnimatorState == EntAnimatorState.Starting)
-                .AddClass("ent-toast--close", item.AnimatorState == EntAnimatorState.Ending)
-                .AddClass("bg-success cl-light", item.Options.Type == EntToastType.Success)
-                .AddClass("bg-danger cl-light", item.Options.Type == EntToastType.Danger)
-                .AddClass("bg-owarning cl-light", item.Options.Type == EntToastType.Warning)
-                .AddClass("bg-info cl-light", item.Options.Type == EntToastType.Info).Build();
+            var itemCss = new CssBuilder("ent-toast")
+                .AddCss("ent-toast--open", item.AnimatorState == EntAnimatorState.Starting)
+                .AddCss("ent-toast--close", item.AnimatorState == EntAnimatorState.Ending)
+                .AddCss("bg-success cl-light", item.Options.Type == EntToastType.Success)
+                .AddCss("bg-danger cl-light", item.Options.Type == EntToastType.Danger)
+                .AddCss("bg-owarning cl-light", item.Options.Type == EntToastType.Warning)
+                .AddCss("bg-info cl-light", item.Options.Type == EntToastType.Info).Build();
 
             <EntAnimator
                 @key="item.Key"
@@ -48,8 +48,8 @@
 
 @code {
 
-    private string RootClass => CssClassBuilder
-        .AddClass("ent-toast-provider")
+    private string RootClass => CssBuilder
+        .AddCss("ent-toast-provider")
         .Build();
 
 
