--- a/Source/Enter.UI/Components/Toolbar/EntToolbar.razor
+++ b/Source/Enter.UI/Components/Toolbar/EntToolbar.razor
@@ -1,5 +1,5 @@
 ﻿@namespace Enter.UI.Components
-@inherits EntComponentBase
+@inherits Enter.UI.Cores.Bases.EntComponentBase
 <CascadingValue Value="@this">
     <div @attributes="AdditionalAttributes" class="@RootCss" >
         @ChildContent
