--- a/Source/Enter.UI/Components/TreeView/EntTreeViewItem.razor
+++ b/Source/Enter.UI/Components/TreeView/EntTreeViewItem.razor
@@ -3,7 +3,7 @@
 @using Enter.UI.Components.TreeView
 @using Enter.UI.Core
 @using Enter.UI.Components.Icon
-@inherits EntComponentBase
+@inherits Enter.UI.Cores.Bases.EntComponentBase
 
 <CascadingValue Value="this" IsFixed="true">
     <li @attributes="@AdditionalAttributes" class="@RootCss" @onclick="Select" @onclick:stopPropagation>
@@ -49,10 +49,10 @@
 
 @code {
 
-    private string RootCss => CssClassBuilder
-        .AddClass("ent-treeview-item")
-        .AddClass("active", !TreeView.MultiSelect && Checked)
-        .AddClass("expanded", Expanded)
+    private string RootCss => CssBuilder
+        .AddCss("ent-treeview-item")
+        .AddCss("active", !TreeView.MultiSelect && Checked)
+        .AddCss("expanded", Expanded)
         .Build();
 
     [CascadingParameter]
@@ -81,13 +81,15 @@
       
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
+        await base.OnAfterRenderAsync(firstRender);
+        
         if (firstRender && Checked)
         {
             Expand();
             TreeView.StateHasChanged();
         }
 
-        await base.OnAfterRenderAsync(firstRender);
+       
     }
 
     public async Task Select()
