--- a/example/Enter.Dashboard/Pages/Documents/UploadBoxPage.razor
+++ b/example/Enter.Dashboard/Pages/Documents/UploadBoxPage.razor
@@ -3,7 +3,7 @@
 @using Enter.UI.Components.Flex
 @using Enter.UI.Components.Icon
 @using Enter.Dashboard.Model
-@inherits Enter.UI.Core.Bases.EntPageBase
+@inherits Enter.UI.Cores.Bases.EntPageBase
 @layout DocumentLayout
 <div class="p-4">
     <EntCard Title="UploadBox" class="mb-4">
